5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1649_2443.log
== TEST (2019-04-07 17:03:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
raio=float(input("raio"))
altura=float(input("altura"))
numero=int(input("'numero"))
from math import*
vcomb=(4*(pi)*(raio0**3))/3
volar=(((pi)*(altura)**2)*(3*raio-altura))/3
if(numero==1) :
	print(round(volar,4))
else :
	print(round(vcomb,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vcomb=(4*(pi)*(raio0**3))/3
NameError: name 'raio0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:04:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
raio=float(input("raio"))
altura=float(input("altura"))
numero=int(input("numero"))
from math import*
vcomb=(4*(pi)*(raio0**3))/3
volar=(((pi)*(altura)**2)*(3*raio-altura))/3
if(numero==1) :
	print(round(volar,4))
else :
	print(round(vcomb,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vcomb=(4*(pi)*(raio0**3))/3
NameError: name 'raio0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:04:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
raio=float(input("raio"))
altura=float(input("altura"))
numero=int(input("numero"))
from math import*
vcomb=(4*(pi)*(raio**3))/3
volar=(((pi)*(altura)**2)*(3*raio-altura))/3
if(numero==1) :
	print(round(volar,4))
else :
	print(round(vcomb,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 17:04:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
raio=float(input("raio"))
altura=float(input("altura"))
numero=int(input("numero"))
from math import*
vcomb=(4*(pi)*(raio**3))/3
volar=(((pi)*(altura)**2)*(3*raio-altura))/3
if(numero==1) :
	print(round(volar,4))
else :
	print(round(vcomb,4))
-- EXECUTION TIME:
0.121851
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:05:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
raio=float(input("raio"))
altura=float(input("altura"))
numero=int(input("numero"))
from math import*
vcomb=((4*(pi)*(raio**3))/3
volar=(((pi)*(altura)**2)*(3*raio-altura))/3
if(numero==1) :
	print(round(volar,4))
else :
	print(round(vcomb,4))
-- ERROR:
File "XXXX", line 9
    volar=(((pi)*(altura)**2)*(3*raio-altura))/3
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:07:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
raio=float(input("raio"))
altura=float(input("altura"))
numero=int(input("numero"))
from math import*
vcomb=(4*pi*raio**3)/3
volar=(pi*(altura**2)*(3*raio-altura))/3
if(numero==1) :
	print(round(volar,4))
else :
	print(round(vcomb,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:08:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
raio=float(input("raio"))
altura=float(input("altura"))
numero=int(input("numero"))
from math import*
vcomb=((4*pi)*(raio**3))/3
volar=(pi*(altura**2)*(3*raio-altura))/3
if(numero==1) :
	print(round(volar,4))
else :
	print(round(vcomb,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 17:08:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
raio=float(input("raio"))
altura=float(input("altura"))
numero=int(input("numero"))
from math import*
vcomb=((4*pi)*(raio**3))/3
volar=(pi*(altura**2)*(3*raio-altura))/3
if(numero==1) :
	print(round(volar,4))
else :
	print(round(vcomb,4))
-- EXECUTION TIME:
0.200049
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:10:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
raio=float(input("raio"))
altura=float(input("altura"))
numero=int(input("numero"))
from math import*
vol=((4*pi)*(raio**3))/3
volcomb=vol-volar
volar=(pi*(altura**2)*(3*raio-altura))/3
if(numero==1) :
	print(round(volar,4))
else :
	print(round(vcomb,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    volcomb=vol-volar
NameError: name 'volar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:11:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
raio=float(input("raio"))
altura=float(input("altura"))
numero=int(input("numero"))
from math import*
vol=((4*pi)*(raio**3))/3
volar=(pi*(altura**2)*(3*raio-altura))/3
volcomb=vol-volar
if(numero==1) :
	print(round(volar,4))
else :
	print(round(volcomb,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 17:11:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
raio=float(input("raio"))
altura=float(input("altura"))
numero=int(input("numero"))
from math import*
vol=((4*pi)*(raio**3))/3
volar=(pi*(altura**2)*(3*raio-altura))/3
volcomb=vol-volar
if(numero==1) :
	print(round(volar,4))
else :
	print(round(volcomb,4))
-- EXECUTION TIME:
0.167856
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:27:36) 
-- CODE:
raio=float(input("raio"))
altura=float(input("h"))
nu=int(input("nu"))

#1  volume de ar=calota #2 volume combustivel= vt-calota
from math import*
total=( (4*pi) * (raio**3) ) /3
calota= (((pi)*(altura**2)) * ((3*raio) - (altura))) /3
comb=total-calota

if(nu==1):
	print(calota)
else:
	print(comb)
-- OUTPUT:
9.025664794069577
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:27:38) 
-- CODE:
raio=float(input("raio"))
altura=float(input("h"))
nu=int(input("nu"))

#1  volume de ar=calota #2 volume combustivel= vt-calota
from math import*
total=( (4*pi) * (raio**3) ) /3
calota= (((pi)*(altura**2)) * ((3*raio) - (altura))) /3
comb=total-calota

if(nu==1):
	print(calota)
else:
	print(comb)
-- EXECUTION TIME:
0.143864
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.025664794069577
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3407570570127
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:28:21) 
-- CODE:
raio=float(input("raio"))
altura=float(input("h"))
nu=int(input("nu"))

#1  volume de ar=calota #2 volume combustivel= vt-calota
from math import*
total=( (4*pi) * (raio**3) ) /3
calota= (((pi)*(altura**2)) * ((3*raio) - (altura))) /3
comb=total-calota

if(nu==1):
	print(calota)
if(nu==2):
	print(comb)
-- EXECUTION TIME:
0.194986
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.025664794069577
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3407570570127
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:32:50) 
-- CODE:
raio=float(input("raio"))
altura=float(input("h"))
nu=int(input("nu"))

#1  volume de ar=calota #2 volume combustivel= vt-calota
from math import*
total=( (4*pi) * (raio**3) ) /3
calota= ( ( (pi) * (altura**2) ) * ( (3*raio) - (altura) ) ) /3
comb=total-calota

if(nu==1):
	print(round(calota,4))
if(nu==2):
	print(round(comb,4))
-- EXECUTION TIME:
0.187482
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:32:55) 
-- CODE:
raio=float(input("raio"))
altura=float(input("h"))
nu=int(input("nu"))

#1  volume de ar=calota #2 volume combustivel= vt-calota
from math import*
total=( (4*pi) * (raio**3) ) /3
calota= ( ( (pi) * (altura**2) ) * ( (3*raio) - (altura) ) ) /3
comb=total-calota

if(nu==1):
	print(round(calota,4))
if(nu==2):
	print(round(comb,4))
-- EXECUTION TIME:
0.136306
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
